--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
           <p class="profile__text">Исследователь океана</p>
           <button class="profile__edit-button hover"></button>
         </div>
-        <button class="profile__add-button hover">
-          <div class="profile__add-button-vector"></div>
-        </button>
+        <button class="profile__add-button hover"></button>
       </section>
 
       <section class="elements">
