--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/image.png" class="profile__avatar" alt="" />
+        <img
+          src="./images/image.png"
+          class="profile__avatar"
+          alt="Фотография в профайле"
+        />
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__text">Исследователь океана</p>
