--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <template id="element-template">
       <li class="element">
-        <img src="#" class="element__pic" alt="" />
+        <img src="" class="element__pic" alt="" />
         <button class="element__del-button hover" type="button"></button>
         <div class="element__info">
           <h2 class="element__title"></h2>
@@ -111,7 +111,7 @@
               class="popup__close-button close-button__zoom hover"
               type="button"
             ></button>
-            <img src="#" class="popup__pic" alt="" />
+            <img src="" class="popup__pic" alt="" />
             <p class="popup__text"></p>
           </div>
         </div>
