--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup__edit">
+    <div class="popup popup_edit">
       <div class="popup__conteiner">
         <button
-          class="popup__close-button close-button__edit hover"
+          class="popup__close-button close-button_edit hover"
           type="button"
         ></button>
-        <form class="popup-form popup-form__edit" name="profile-form">
+        <form class="popup-form popup-form_edit" name="profile-form">
           <h3 class="popup-form__title">Редактировать профиль</h3>
           <fieldset class="popup-form__input">
             <input
@@ -66,13 +66,13 @@
       </div>
     </div>
 
-    <div class="popup popup__add">
+    <div class="popup popup_add">
       <div class="popup__conteiner">
         <button
-          class="popup__close-button close-button__add hover"
+          class="popup__close-button close-button_add hover"
           type="button"
         ></button>
-        <form class="popup-form popup-form__add" name="elements-form">
+        <form class="popup-form popup-form_add" name="elements-form">
           <h3 class="popup-form__title">Новое место</h3>
           <fieldset class="popup-form__input">
             <input
@@ -105,10 +105,10 @@
           <h2 class="element__title"></h2>
           <button class="element__like-button hover" type="button"></button>
         </div>
-        <div class="popup popup__zoom">
+        <div class="popup popup_zoom">
           <div class="popup__zoom-conteiner">
             <button
-              class="popup__close-button close-button__zoom hover"
+              class="popup__close-button close-button_zoom hover"
               type="button"
             ></button>
             <img src="#" class="popup__pic" alt="" />
