--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="popup popup_edit">
       <div class="popup__conteiner">
         <button
-          class="popup__close-button close-button_edit hover"
+          class="popup__close-button popup__close-button_edit hover"
           type="button"
         ></button>
         <form class="popup-form popup-form_edit" name="profile-form">
@@ -69,7 +69,7 @@
     <div class="popup popup_add">
       <div class="popup__conteiner">
         <button
-          class="popup__close-button close-button_add hover"
+          class="popup__close-button popup__close-button_add hover"
           type="button"
         ></button>
         <form class="popup-form popup-form_add" name="elements-form">
@@ -108,7 +108,7 @@
         <div class="popup popup_zoom">
           <div class="popup__zoom-conteiner">
             <button
-              class="popup__close-button close-button_zoom hover"
+              class="popup__close-button popup__close-button_zoom hover"
               type="button"
             ></button>
             <img src="#" class="popup__pic" alt="" />
