--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
       </div>
     </div>
 
+    <div class="popup popup_zoom popup_dark">
+      <div class="popup__zoom-conteiner">
+        <button
+          class="popup__close-button popup__close-button_zoom hover"
+          type="button"
+        ></button>
+        <img src="#" class="popup__pic" alt="" />
+        <p class="popup__text"></p>
+      </div>
+    </div>
+
     <template id="element-template">
       <li class="element">
         <img src="#" class="element__pic" alt="" />
@@ -105,18 +116,9 @@
           <h2 class="element__title"></h2>
           <button class="element__like-button hover" type="button"></button>
         </div>
-        <div class="popup popup_zoom">
-          <div class="popup__zoom-conteiner">
-            <button
-              class="popup__close-button popup__close-button_zoom hover"
-              type="button"
-            ></button>
-            <img src="#" class="popup__pic" alt="" />
-            <p class="popup__text"></p>
-          </div>
-        </div>
       </li>
     </template>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
