--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             required
           />
           <span id="about-error" class="error"></span>
-          <button class="popup-form__button" type="submit">Сохранить</button>
+          <button class="popup-form__button" type="submit" name="button">Сохранить</button>
         </form>
       </div>
     </div>
@@ -99,7 +99,7 @@
             required
           />
           <span id="link-error" class="error"></span>
-          <button class="popup-form__button" type="submit">Создать</button>
+          <button class="popup-form__button popup-form__button_disabled" type="submit" name="button" disabled>Создать</button>
         </form>
       </div>
     </div>
@@ -126,6 +126,7 @@
       </li>
     </template>
 
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/validate.js"></script>
   </body>
