--- a/index.html
+++ b/index.html
@@ -43,29 +43,35 @@
         ></button>
         <form class="popup-form popup-form_edit" name="user" novalidate>
           <h3 class="popup-form__title">Редактировать профиль</h3>
-          <input
-            type="text"
-            id="user-name"
-            name="username"
-            class="popup-form__item popup-form__item_el_name"
-            minlength="2"
-            maxlength="40"
-            placeholder="Введите имя"
-            required
-          />
-          <span id="user-name-error" class="error"></span>
-          <input
-            type="text"
-            id="about"
-            name="about"
-            class="popup-form__item popup-form__item_el_job"
-            minlength="2"
-            maxlength="200"
-            placeholder="О себе"
-            required
-          />
-          <span id="about-error" class="error"></span>
-          <button class="popup-form__button" type="submit" name="button">Сохранить</button>
+          <fieldset class="popup-form__conteiner">
+            <input
+              type="text"
+              id="user-name"
+              name="username"
+              class="popup-form__item"
+              minlength="2"
+              maxlength="40"
+              placeholder="Введите имя"
+              required
+            />
+            <span id="user-name-error" class="error"></span>
+          </fieldset>
+          <fieldset class="popup-form__conteiner">
+            <input
+              type="text"
+              id="about"
+              name="about"
+              class="popup-form__item"
+              minlength="2"
+              maxlength="200"
+              placeholder="О себе"
+              required
+            />
+            <span id="about-error" class="error"></span>
+          </fieldset>
+          <button class="popup-form__button" type="submit" name="button">
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
@@ -78,28 +84,34 @@
         ></button>
         <form class="popup-form popup-form_add" name="place" novalidate>
           <h3 class="popup-form__title">Новое место</h3>
-          <input
-            type="text"
-            id="name-card"
-            name="namecard"
-            class="popup-form__item popup-form__item_el_place"
-            minlength="2"
-            maxlength="30"
-            placeholder="Название"
-            required
-          />
-          <span id="name-card-error" class="error"></span>
-          <input
-            type="url"
-            id="link"
-            name="link"
-            class="popup-form__item popup-form__item_el_url"
-            minlength="2"
-            placeholder="Ссылка на картинку"
-            required
-          />
-          <span id="link-error" class="error"></span>
-          <button class="popup-form__button popup-form__button_disabled" type="submit" name="button" disabled>Создать</button>
+          <fieldset class="popup-form__conteiner">
+            <input
+              type="text"
+              id="name-card"
+              name="namecard"
+              class="popup-form__item"
+              minlength="2"
+              maxlength="30"
+              placeholder="Название"
+              required
+            />
+            <span id="name-card-error" class="error"></span>
+          </fieldset>
+          <fieldset class="popup-form__conteiner">
+            <input
+              type="url"
+              id="link"
+              name="link"
+              class="popup-form__item"
+              minlength="2"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <span id="link-error" class="error"></span>
+          </fieldset>
+          <button class="popup-form__button" type="submit" name="button">
+            Создать
+          </button>
         </form>
       </div>
     </div>
@@ -126,8 +138,6 @@
       </li>
     </template>
 
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
