--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
 
@@ -14,7 +13,7 @@
     <main class="content">
       <section class="profile">
         <img
-          src="./images/image.png"
+          src="<%=require('./images/image.png')%>"
           class="profile__avatar"
           alt="Фотография в профайле"
         />
@@ -37,10 +36,7 @@
 
     <div class="popup popup_edit">
       <div class="popup__conteiner">
-        <button
-          class="popup__close-button popup__close-button_edit hover"
-          type="button"
-        ></button>
+        <button class="popup__close-button hover" type="button"></button>
         <form class="popup-form popup-form_edit" name="user" novalidate>
           <h3 class="popup-form__title">Редактировать профиль</h3>
           <fieldset class="popup-form__conteiner">
@@ -78,10 +74,7 @@
 
     <div class="popup popup_add">
       <div class="popup__conteiner">
-        <button
-          class="popup__close-button popup__close-button_add hover"
-          type="button"
-        ></button>
+        <button class="popup__close-button hover" type="button"></button>
         <form class="popup-form popup-form_add" name="place" novalidate>
           <h3 class="popup-form__title">Новое место</h3>
           <fieldset class="popup-form__conteiner">
@@ -118,10 +111,7 @@
 
     <div class="popup popup_zoom popup_dark">
       <div class="popup__zoom-conteiner">
-        <button
-          class="popup__close-button popup__close-button_zoom hover"
-          type="button"
-        ></button>
+        <button class="popup__close-button hover" type="button"></button>
         <img src="#" class="popup__pic" alt="" />
         <p class="popup__text"></p>
       </div>
@@ -138,6 +128,5 @@
       </li>
     </template>
 
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
