Проектная работа 9 на проверку c deploy с исправлениями

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-box">
-          <img src="" class="profile__avatar" alt="Фотография в профайле" />
+          <img src="#" class="profile__avatar" alt="Фотография в профайле" />
           <div class="profile__avatar-ikon"></div>
         </div>
         <div class="profile__info">
@@ -128,14 +128,14 @@
           <fieldset class="popup-form__conteiner">
             <input
               type="url"
-              id="link"
+              id="avatar"
               name="avatar"
               class="popup-form__item"
               minlength="2"
               placeholder="Ссылка на картинку"
               required
             />
-            <span id="link-error" class="error"></span>
+            <span id="avatar-error" class="error"></span>
           </fieldset>
           <button class="popup-form__button" type="submit" name="button">
             Сохранить
